# AudioAndVideoCoding

./: .gitignore
labwork1/ex10/: CMakeLists.txt
labwork1/ex10/src/: audio_entropy.cpp
labwork1/ex11/: CMakeLists.txt  compile.sh  main.cpp
labwork1/ex2/: CMakeLists.txt
labwork1/ex2/src/: cppixel.cpp
labwork1/ex3/: CMakeLists.txt
labwork1/ex3/src/: img_vid_viewer.cpp
labwork1/ex4/: CMakeLists.txt
labwork1/ex4/src/: wav_histogram.cpp
labwork1/ex5/: CMakeLists.txt
labwork1/ex5/src/: hist.cpp  hist.hpp  main.cpp
labwork1/ex7/: CMakeLists.txt
labwork1/ex7/src/: main.cpp
labwork1/ex9/: CMakeLists.txt
labwork1/ex9/src/: img_vid_snr.cpp
labwork1/files/wav/: plot.py
labwork1/wav/: CMakeLists.txt  main  main.cpp
labwork1/wav/Wav/: Wav.cpp  Wav.h
labwork2/: CMakeLists.txt
labwork2/lib/: Golomb.cpp  Golomb.h
labwork2/lib/bitstream/: bitstream.h
labwork2/lib/golomb/: golomb.cpp  golomb.h
labwork2/lib/predictor/: main.cpp
labwork2/lib/predictor/Predictor/: Predictor.cpp  Predictor.h
labwork2/src/: mad_codec.cpp
labwork2/src/lib/bitstream/: bitstream.cpp  bitstream.h  main.cpp
labwork2/src/lib/golomb/: golomb.cpp  golomb.h  golomb_bitstream.cpp  golomb_bitstream.h
labwork2/src/lib/predictor/: CMakeLists.txt  predictor.cpp  predictor.h
labwork2/src/lib/quantization/: quant.cpp  quant.h
labwork2/src/lib/wav/: CMakeLists.txt  wav.cpp  wav.h  wav_utils.cpp  wav_utils.h
labwork2/src/lossless/: offline_lossless.cpp  offline_lossless.h  online_lossless.cpp  online_lossless.h
labwork2/src/lossy/: online_lossy.cpp  online_lossy.h
labwork2/src/parametizer/: parametizer.cpp  parametizer.h
labwork2/src/statistics/: stats_utils.cpp
labwork2/src/statistics/wav_hist/: CMakeLists.txt
labwork2/src/statistics/wav_hist/src/: wav_histogram.cpp
labwork3/: CMakeLists.txt
labwork3/src/: dec_hybrid.cpp  dec_intra.cpp  dec_lossy.cpp  enc_hybrid.cpp  enc_intra.cpp  enc_lossy.cpp
labwork3/src/codec1/: dec_intra.cpp  enc_intra.cpp  file_format.txt
labwork3/src/codec2/: dec_hybrid.cpp  dec_hybrid.h  enc_hybrid.cpp  enc_hybrid.h  file_format.txt
labwork3/src/codec3/: dec_lossy.cpp  dec_lossy.h  dec_lossy_dct.cpp  enc_lossy.cpp  enc_lossy.h  enc_lossy_dct.cpp  file_format.txt
labwork3/src/codec3v2/: dec_lossy.cpp  enc_lossy.cpp  file_format.txt
labwork3/src/lib/args/: args.cpp  args.h
labwork3/src/lib/bitstream/: bitstream.cpp  bitstream.h  bitstream_wrapper.cpp  bitstream_wrapper.h
labwork3/src/lib/dct/: CMakeLists.txt  dct.cpp  dct.h
labwork3/src/lib/dct/rle/: rle.cpp  rle.h
labwork3/src/lib/dct/zigzag/: zigzag.cpp  zigzag.h
labwork3/src/lib/golomb/: golomb.h  golomb_bitstream.cpp  golomb_bitstream.h  mat_golomb_bitstream.cpp  mat_golomb_bitstream.h
labwork3/src/lib/motion_compensator/: compensator.cpp
labwork3/src/lib/predictor/: compensator.cpp  compensator.h  predictor.cpp  predictor.h
labwork3/src/lib/quantization/: quant.cpp
labwork3/src/lib/y4m/: a.out  y4m.cpp  y4m.h
labwork3/src/player/: player.cpp
